--- a/links.html
+++ b/links.html
@@ -1,6 +1,17 @@
-links.txt
-Created Mon 03 Jan 2022 12:54:14 PM AKST
-Copyright (C) 2022 by Raymond E. Marcil <marcilr@gmail.com>
+<!DOCTYPE html>
+<html>
+<!-- =============================================================
+     links.html
+     Created Mon 03 Jan 2022 12:54:14 PM AKST
+     Copyright (C) 2022 by Raymond E. Marcil <marcilr@gmail.com>
+     ============================================================= -->
+<head>
+
+</head>
+<body style="width:80%; vertical-align: middle;">
+links.html<br>
+Created Mon 03 Jan 2022 12:54:14 PM AKST<br>
+Copyright (C) 2022 by Raymond E. Marcil <marcilr@gmail.com><br>
 
 
 git-crypt related links
@@ -11,3 +22,6 @@ Links
 Things You Must Know About git-crypt To Successfully Protect Your Secret Data<br>
 November 9th 2020<br>
 https://hackernoon.com/things-you-must-know-about-git-crypt-to-successfully-protect-your-secret-data-kyi3wi6
+
+</body>
+</html>
