Added initial header and links section.

--- a/links.html
+++ b/links.html
@@ -14,14 +14,22 @@ Created Mon 03 Jan 2022 12:54:14 PM AKST<br>
 Copyright (C) 2022 by Raymond E. Marcil <marcilr@gmail.com><br>
 
 
-git-crypt related links
+<!-- ============================ GIT-CRYPT =======================-->
+<!-- ============================ GIT-CRYPT =======================-->
+<!-- ============================ GIT-CRYPT =======================-->
+<p style="margin-top:1.5cm;">
+<h2>git-crypt</h2>
 
 
-Links
-=====
-Things You Must Know About git-crypt To Successfully Protect Your Secret Data<br>
+<!-- ============================== LINKS =========================-->
+<!-- ============================== LINKS =========================-->
+<p style="margin-top:1.5cm;">
+<h2>Links</h2>
+Things You Must Know About git-crypt To Successfully 
+Protect Your Secret Data<br>
 November 9th 2020<br>
-https://hackernoon.com/things-you-must-know-about-git-crypt-to-successfully-protect-your-secret-data-kyi3wi6
+<a href="https://hackernoon.com/things-you-must-know-about-git-crypt-to-successfully-protect-your-secret-data-kyi3wi6">
+https://hackernoon.com/things-you-must-know-about-git-crypt-to-successfully-protect-your-secret-data-kyi3wi6</a
 
 </body>
 </html>
