--- a/links.html
+++ b/links.html
@@ -20,6 +20,8 @@ Copyright (C) 2022 by Raymond E. Marcil <marcilr@gmail.com><br>
 <p style="margin-top:1.5cm;">
 <h2>git-crypt</h2>
 
+Encrypted git repository<br>
+
 
 <!-- ============================== LINKS =========================-->
 <!-- ============================== LINKS =========================-->
