Updated email address in header.

--- a/links.html
+++ b/links.html
@@ -11,7 +11,8 @@
 <body style="width:80%; vertical-align: middle;">
 links.html<br>
 Created Mon 03 Jan 2022 12:54:14 PM AKST<br>
-Copyright (C) 2022 by Raymond E. Marcil <marcilr@gmail.com><br>
+Copyright (C) 2022 by Raymond E. Marcil 
+<a href="mailto:marcilr@gmail.com">&lt;marcilr@gmail.com&gt;</a><br>
 
 
 <!-- ============================ GIT-CRYPT =======================-->
