--- a/links.html
+++ b/links.html
@@ -19,9 +19,7 @@ Copyright (C) 2022 by Raymond E. Marcil
 <!-- ============================ GIT-CRYPT =======================-->
 <!-- ============================ GIT-CRYPT =======================-->
 <p style="margin-top:1.5cm;">
-<h2>git-crypt</h2>
-
-Encrypted git repository<br>
+<h2>git-crypt related links</h2>
 
 
 <!-- ============================== LINKS =========================-->
