Updated git-crypt links

--- a/links.html
+++ b/links.html
@@ -25,8 +25,25 @@ Copyright (C) 2022 by Raymond E. Marcil
 <!-- ============================== LINKS =========================-->
 <!-- ============================== LINKS =========================-->
 <p style="margin-top:1.5cm;">
+
 <h2>Links</h2>
-Things You Must Know About git-crypt To Successfully 
+
+<p>
+git-crypt<br>
+<a href="https://github.com/AGWA/git-crypt?ref=hackernoon.com">
+https://github.com/AGWA/git-crypt?ref=hackernoon.com</a>
+
+<p>
+git-crypt installation<br>
+<a href="install.html">install.html</a>
+
+<p>
+git-crypt install page<br>
+<a href="https://github.com/AGWA/git-crypt/blob/master/INSTALL.md?ref=hackernoon.com">
+https://github.com/AGWA/git-crypt/blob/master/INSTALL.md?ref=hackernoon.com</a>
+
+<p>
+Things You Must Know About git-crypt To Successfully <br>
 Protect Your Secret Data<br>
 November 9th 2020<br>
 <a href="https://hackernoon.com/things-you-must-know-about-git-crypt-to-successfully-protect-your-secret-data-kyi3wi6">
