--- a/git-crypt.html
+++ b/git-crypt.html
@@ -27,6 +27,12 @@ Copyright (C) 2022 by Raymond E. Marcil
 <!-- ============================== FILES ========================= -->
 <!-- ============================== FILES ========================= -->
 <p style="margin-top:1.5cm;">
+<h2>Files</h2>
+
+
+<!-- ============================== LINKS ========================= -->
+<!-- ============================== LINKS ========================= -->
+<p style="margin-top:1.5cm;">
 <h2>Links</h2>
 
 <!-- ======================= GIT-CRYPT RELATED LINKS ============== -->
