Added Files section:
<!-- ============================== FILES ========================= -->
<!-- ============================== FILES ========================= -->
<p style="margin-top:1.5cm;">
<h2>Files</h2>
Installation of <a href="https://github.com/AGWA/git-crypt?ref=hackernoon.com">git-crypt</a>
on <a href="https://www.debian.org/releases/buster/">Debian 10 buster</a>:<br>
<a href="install.html">install.html</a><br>

--- a/git-crypt.html
+++ b/git-crypt.html
@@ -28,6 +28,9 @@ Copyright (C) 2022 by Raymond E. Marcil
 <!-- ============================== FILES ========================= -->
 <p style="margin-top:1.5cm;">
 <h2>Files</h2>
+Installation of <a href="https://github.com/AGWA/git-crypt?ref=hackernoon.com">git-crypt</a> 
+on <a href="https://www.debian.org/releases/buster/">Debian 10 buster</a>:<br>
+<a href="install.html">install.html</a><br>
 
 
 <!-- ============================== LINKS ========================= -->
